# Rolling-hash

./: CMakeLists.txt  main.cpp
include/: Delta.h  FileReader.h  HashComparer.h  Rolling.h
src/: DeltaOperations.cpp  FileReader.cpp  HashComparer.cpp  Rolling.cpp
unit_tests/: tests.cpp
